<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kdvs.MainActivity" >

    <EditText
        android:id="@+id/edtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnPrice"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPrice"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/calculate" />


    <TextView
        android:id="@+id/trTextOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TextUsdOnly"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/trKdv"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextUsdOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnPrice"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/usdText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/trTextOnly"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextUsdOnly"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/TextUsdOnly"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/usdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/kdvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</RelativeLayout>