<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kdvs.SettingActivity" >

    <TextView
        android:id="@+id/TextUsdOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/usdText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtUsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextUsdOnly"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:inputType="number|numberSigned|numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/kdvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUsd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/kdvText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edtKdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kdvText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number|numberSigned|numberDecimal" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtKdv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/save_changes" />

</RelativeLayout>
